--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -1,3 +1,12 @@
-h1{
-    color:red;
+* {
+    font-family: 'Roboto', sans-serif;
+    box-sizing: border-box;
+}
+
+.content {
+    padding: 1rem;
+}
+
+.content h1{
+    margin: 0;
 }
