--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -1,12 +1,8 @@
 * {
-    font-family: 'Roboto', sans-serif;
-    box-sizing: border-box;
+  font-family: "Roboto", sans-serif;
+  box-sizing: border-box;
 }
 
 .content {
-    padding: 1rem;
-}
-
-.content h1{
-    margin: 0;
+  padding: 1rem;
 }
