--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -3,6 +3,15 @@
   box-sizing: border-box;
 }
 
+body header{
+  color:white;
+  display: grid;
+  place-items: center;
+}
+
+body{
+  background: linear-gradient(to right, white,black,red);
+}
 .content {
   padding: 1rem;
 }
