--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -1,17 +1,14 @@
 * {
-  font-family: "Roboto", sans-serif;
+  font-family: 'Roboto', sans-serif;
   box-sizing: border-box;
 }
 
-body header{
-  color:white;
-  display: grid;
-  place-items: center;
+body {
+  background: linear-gradient(to right,white,black, red);
 }
 
-body{
-  background: linear-gradient(to right, white,black,red);
-}
 .content {
-  padding: 1rem;
+  text-align: center;
+  color: white;
 }
+ 
