--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -1,18 +1,10 @@
 .pokemons {
   display: grid;
-  grid-template-columns: 1fr;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 3;
   margin: 0;
   padding: 0;
   list-style: none;
-}
-
-.pokemon {
-  display: flex;
-  flex-direction: column;
-  margin: 0.5rem;
-  padding: 1rem;
-  border: 3px solid black;
-  border-radius: 1rem;
 }
 
 .normal {
@@ -21,9 +13,6 @@
 
 .grass {
   background-color: #77c850;
-}
-.grass:hover{
-  color:black;
 }
 
 .fire {
@@ -90,18 +79,36 @@
   background-color: #f9aec7;
 }
 
+.pokemon {
+  display: flex;
+  flex-direction: column;
+  margin: .5rem;
+  padding: 1rem;
+  border-radius: 1rem;
+  box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px, rgba(6, 24, 44, 0.65) 0px 4px 6px -1px, rgba(255, 255, 255, 0.08) 0px 1px 0px inset;
+}
+
+.pokemon:hover{
+  transition: 0.5s;
+  transform: scale(1.04);
+}
+
+.pokemon:hover .number{
+  transition: 0.5s;
+  color:white;
+}
+
 .pokemon .number {
   color: #000;
-  opacity: 0.3;
+  opacity: .3;
   text-align: right;
-  font-size: 0.625rem;
+  font-size: .625rem;
 }
 
 .pokemon .name {
   text-transform: capitalize;
   color: #fff;
-  margin-bottom: 0.25rem;
-  text-decoration: underline;
+  margin-bottom: .25rem;
 }
 
 .pokemon .detail {
@@ -119,24 +126,20 @@
 
 .pokemon .detail .types .type {
   color: #fff;
-  padding: 0.25rem 0.5rem;
-  margin: 0.25rem 0;
-  font-size: 0.625rem;
+  padding: .25rem .5rem;
+  margin: .25rem 0;
+  font-size: .625rem;
   border-radius: 1rem;
   filter: brightness(1.1);
   text-align: center;
-  border: 2px solid black;
 }
 
 .pokemon .detail img {
-  max-width: 100;
+  max-width: 100%;
   height: 70px;
-  border: .5px solid white;
-  padding: 10px 10px;
-  border-radius: 1rem;
 }
 
-.pagination{
+.pagination {
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -145,30 +148,17 @@
   padding: 1rem;
 }
 
-.pagination button{
+.pagination button {
   padding: .25rem .5rem;
   margin: .25rem 0;
   font-size: .625rem;
   color: #fff;
-  background-color: #8c79db;
-  border: 1px solid black;
+  background-color: #6c79db;
+  border: none;
   border-radius: 1rem;
 }
 
-@media screen and (min-width:380px){
-  .pokemon{
-    grid-template-columns: 1fr 1fr;
-  }
-}
-
-@media screen and (min-width:576px){
-  .pokemon{
-    grid-template-columns: 1fr 1fr 1fr;
-  }
-}
-
-@media screen and (min-width:992px){
-  .pokemon{
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-  }
+.pagination button:hover{
+    transition: 0.5s;
+    transform: scale(1.2);
 }
