add media queries

--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -162,3 +162,26 @@
     transition: 0.5s;
     transform: scale(1.2);
 }
+
+/**
+ * Basic CSS Media Query Template
+ * TODO: I should probably use Sass...
+ * Author: Michael Vieth
+ * ------------------------------------------
+ *  Responsive Grid Media Queries - 1280, 1024, 768, 480
+ *   1280-1024   - desktop (default grid)
+ *   1024-768    - tablet landscape
+ *   768-480     - tablet 
+ *   480-less    - phone landscape & smaller
+ * --------------------------------------------
+ */
+ 
+ /* Portrait */
+ @media screen and (orientation:portrait) { 
+  .pokemons {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    margin: 0;
+    padding: 0;
+    list-style: none;
+  }}
