--- a/angular-blog/src/styles.css
+++ b/angular-blog/src/styles.css
@@ -1,7 +1,1 @@
-*{
-    margin:0;
-    padding:0;
-    box-sizing: border-box;
-    background-color: black;
-    color:white;
-}
+/* You can add global styles to this file, and also import other style files */
