--- a/angular-blog/src/app/components/menu-bar/menu-bar.component.html
+++ b/angular-blog/src/app/components/menu-bar/menu-bar.component.html
@@ -1,1 +1,7 @@
-<p>menu-bar works!</p>
+<div class="container__menu-bar">
+    <ul>
+        <li><a href="https://github.com/rafaeldfigueiredo">Github</a></li>
+        <li><a href="https://www.linkedin.com/in/rafael-diamantino-de-figueiredo-8969261b7/">LinkedIn</a></li>
+        <li><a href="#">Youtube</a></li>
+    </ul>
+</div>
