--- a/angular-blog/src/app/components/small-card/small-card.component.html
+++ b/angular-blog/src/app/components/small-card/small-card.component.html
@@ -1,1 +1,14 @@
-<p>small-card works!</p>
+<div class="container__small-card">
+  <div class="container__small-card-content">
+    <div class="small-card__photo">
+      <a href="#"
+        ><img
+          src="https://w7.pngwing.com/pngs/1003/487/png-transparent-github-pages-random-icons-white-logo-monochrome-thumbnail.png"
+      /></a>
+    </div>
+    <div class="small-card__title">
+      <h1><a href="#">O Git do Hub</a></h1>
+    </div>
+    <div class="small-card__description"></div>
+  </div>
+</div>
