--- a/angular-blog/src/app/components/big-card/big-card.component.html
+++ b/angular-blog/src/app/components/big-card/big-card.component.html
@@ -1,13 +1,26 @@
 <div class="container__big-card">
   <div class="big-card__photo">
-    <img src="https://img.freepik.com/free-psd/premium-mobile-phone-screen-mockup-template_53876-81688.jpg" >
+    <a href="#">
+      <img
+        src="https://img.freepik.com/free-psd/premium-mobile-phone-screen-mockup-template_53876-81688.jpg"
+      />
+    </a>
   </div>
+
   <div class="big-card__title">
-    <h1>Nova Versão do Angular</h1>
+    <a href="#">
+      <h1>Nova Versão do Angular</h1>
+    </a>
   </div>
+
   <div class="big-card__description">
     <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum nisi deleniti reprehenderit temporibus illo assumenda harum nihil natus dicta, corrupti, voluptatum laudantium officia magni rem culpa? Tempora soluta dolorum asperiores?
+      <a href="#">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum nisi
+        deleniti reprehenderit temporibus illo assumenda harum nihil natus
+        dicta, corrupti, voluptatum laudantium officia magni rem culpa? Tempora
+        soluta dolorum asperiores?
+      </a>
     </p>
-    </div>
+  </div>
 </div>
