--- a/angular-blog/src/styles.css
+++ b/angular-blog/src/styles.css
@@ -6,4 +6,5 @@
     background-color: #111111;
     color: white;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    text-decoration: none;
 }
