--- a/angular-blog/src/app/pages/home/home.component.html
+++ b/angular-blog/src/app/pages/home/home.component.html
@@ -1,15 +1,24 @@
-<header>
-    <app-menu-bar></app-menu-bar>
-</header>
-<app-menu-title/>
+<app-menu-title />
 <div class="container__articles">
-    <div class="articles__main">
-        <app-big-card></app-big-card>
-    </div>
-    <div class="articles__others">
-        <app-small-card></app-small-card>
-        <app-small-card></app-small-card>
-        <app-small-card></app-small-card>
-    </div>
-    
+  <div class="articles__main">
+    <app-big-card
+      photoCover="https://u-static.fotor.com/images/text-to-image/result/PRO-c63ee265b2964805a7b2894678ebe8d5.jpg"
+      cardTitle="Nova Versão do Angular"
+      cardDescription="Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum nisideleniti reprehenderit temporibus illo assumenda harum nihil natusdicta, corrupti, voluptatum laudantium officia magni rem culpa? Temporasoluta dolorum asperiores"
+    />
+  </div>
+  <div class="articles__others">
+    <app-small-card
+      cardCover="https://w7.pngwing.com/pngs/1003/487/png-transparent-github-pages-random-icons-white-logo-monochrome-thumbnail.png"
+      cardTitle="O Git do Hub"
+    />
+    <app-small-card
+      cardCover="https://u-static.fotor.com/images/text-to-image/result/PRO-d9ead80f08934ffbbaa03568beea4449.jpg"
+      cardTitle="Fig the Gif Pics"
+    />
+    <app-small-card
+      cardCover="https://u-static.fotor.com/images/text-to-image/result/PRO-2f54bde9b4ef4b4fb1fbbb6e0784f70c.jpg"
+      cardTitle="É ele"
+    />
+  </div>
 </div>
