--- a/angular-blog/src/app/pages/home/home.component.html
+++ b/angular-blog/src/app/pages/home/home.component.html
@@ -2,23 +2,24 @@
 <div class="container__articles">
   <div class="articles__main">
     <app-big-card
-      photoCover="https://u-static.fotor.com/images/text-to-image/result/PRO-c63ee265b2964805a7b2894678ebe8d5.jpg"
-      cardTitle="Nova Versão do Angular"
+      Id="1"
+      photoCover="https://u-static.fotor.com/images/text-to-image/result/PRO-d9ead80f08934ffbbaa03568beea4449.jpg"
+      cardTitle="Yes"
       cardDescription="Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum nisideleniti reprehenderit temporibus illo assumenda harum nihil natusdicta, corrupti, voluptatum laudantium officia magni rem culpa? Temporasoluta dolorum asperiores"
     />
   </div>
   <div class="articles__others">
+    <app-small-card 
+    Id="2"
+    photoCover="https://u-static.fotor.com/images/text-to-image/result/PRO-2297775941ef4d63b3853bc99095b87b.jpg"
+    cardTitle="Honorable Cassandra"/>
     <app-small-card
-      cardCover="https://w7.pngwing.com/pngs/1003/487/png-transparent-github-pages-random-icons-white-logo-monochrome-thumbnail.png"
-      cardTitle="O Git do Hub"
+      photoCover="https://u-static.fotor.com/images/text-to-image/result/PRO-78d1d57a9bc8436bbbad6a75296afa4a.jpg"
+      cardTitle="Honorable Fumbdruck"
     />
     <app-small-card
-      cardCover="https://u-static.fotor.com/images/text-to-image/result/PRO-d9ead80f08934ffbbaa03568beea4449.jpg"
-      cardTitle="Fig the Gif Pics"
-    />
-    <app-small-card
-      cardCover="https://u-static.fotor.com/images/text-to-image/result/PRO-2f54bde9b4ef4b4fb1fbbb6e0784f70c.jpg"
-      cardTitle="É ele"
+      photoCover="https://u-static.fotor.com/images/text-to-image/result/PRO-fe35efed5e3e40389bd00d99b436fa38.jpg"
+      cardTitle="Idiot Fairy"
     />
   </div>
 </div>
