--- a/angular-blog/src/app/components/big-card/big-card.component.css
+++ b/angular-blog/src/app/components/big-card/big-card.component.css
@@ -1,31 +1,30 @@
-img{
-    height: 200px;
+.container__big-card {
+  margin-left: 20px;
+  margin-right: 20px;
+
+  width: 400px;
+  height: 500px;
+
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
 }
 
-.container__big-card{
-    border-radius: 5px;
-    height: 600px;
-    width: 400px;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: flex-start;
-}
-
-.big-card__title > h1{
-    margin-top: 15px;
-    font-size: 20px;
+.big-card__title > h1 {
+  margin-top: 15px;
+  font-size: 20px;
 }
 
 .big-card__description {
-    margin-top: 20px;
-}
-.big-card__description > p > a{
-    margin-top: 15px;
-    color: grey;
+  margin-top: 20px;
 }
 
-.big-card__photo > a > img{
-    width: 100%;
-    min-width: 400px;
+.big-card__description > p > a {
+  color: grey;
+}
+
+.big-card__photo >  img {
+  width: 100%;
+  min-width: 400px;
 }
