--- a/angular-blog/src/app/components/menu-bar/menu-bar.component.css
+++ b/angular-blog/src/app/components/menu-bar/menu-bar.component.css
@@ -1,12 +1,9 @@
-.container__menu-bar {
-    margin-top: 15px;
-}
 .container__menu-bar > ul {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    margin-top: 20px;
+  display: flex;
+  flex-direction: row;
 }
-.container__menu-bar > ul > li{
-    list-style-type: none;
+
+.container__menu-bar > ul > li {
+  margin-right: 20px;
+  list-style: none;
 }
