--- a/angular-blog/src/app/components/small-card/small-card.component.css
+++ b/angular-blog/src/app/components/small-card/small-card.component.css
@@ -1,23 +1,25 @@
 .container__small-card{
-    width: 700px;
-    display: flex;
-    flex-direction: row;
+  width: 700px;
+  margin-bottom: 15px;
 }
 
 .container__small-card-content{
-    display: flex;
-    flex-direction: row;
+  display: flex;
+  flex-direction: row;
 }
 
-.small-card__photo > a > img{
-    height: 150px;
-    width: 200px;
-    min-width: 200px;
-    margin-right: 20px;
+.small-card__photo > img {
+  width: 200px;
+  min-width: 200px;
+  margin-right: 20px;
 }
 
-.small-card__title{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.small-card__title {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.container__small-card__separator{
+  margin-top: 10px;
 }
