--- a/angular-blog/src/app/components/small-card/small-card.component.html
+++ b/angular-blog/src/app/components/small-card/small-card.component.html
@@ -1,12 +1,19 @@
 <div class="container__small-card">
   <div class="container__small-card-content">
     <div class="small-card__photo">
-      <a href="#"><img [src]="cardCover" /></a>
+      <img src="{{ photoCover }}" />
     </div>
+
     <div class="small-card__title">
       <h1>
-        <a href="#">{{ cardTitle }}</a>
+        <a [routerLink]="['content', Id]">
+          {{ cardTitle }}
+        </a>
       </h1>
     </div>
+  </div>
+
+  <div class="container__small-card__separator">
+    <hr />
   </div>
 </div>
