--- a/angular-blog/src/app/pages/content/content.component.html
+++ b/angular-blog/src/app/pages/content/content.component.html
@@ -1,11 +1,15 @@
 <div class="container__content">
   <div class="content__cover">
-    <img [src]="photoCover" alt="" />
+    <img src="{{ photoCover }}" alt="" srcset="">
   </div>
   <div class="content__title">
-    <h1>{{contentTitle}}</h1>
+    <h1>{{ contentTitle }}</h1>
+    <hr />
   </div>
   <div class="content__description">
-    <p>{{contentDescription}}</p>
-  <a href=""> <<< Voltar</a>
+    <a [routerLink]="['']"> << VOLTAR </a>
+    <p>
+      {{ contentDescription }}
+    </p>
+  </div>
 </div>
