--- a/angular-blog/src/app/pages/home/home.component.css
+++ b/angular-blog/src/app/pages/home/home.component.css
@@ -1,14 +1,17 @@
-.container__articles{
+.container__articles {
   margin-top: 30px;
-
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
 }
 
-header{
-  margin-top: 15px;
-  margin-bottom: 15px;
+app-big-card {
+  margin-right: 700px;
+}
 
-  border: 1px solid white;
+@media screen and (max-width: 600px) {
+  .container__articles {
+    margin-top: 30px;
+    display: flex;
+    flex-direction: column;
+  }
 }
